# bsuir-mrzvis-1-2

./: LICENSE  README.md  app.py  pyproject.toml
