[tool.poetry]
name = "mrzvis-graphs"
version = "0.1.0"
description = ""
authors = ["V-outsider <voutsider@tutanota.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.4"
numpy = "^1.26.4"
streamlit = "^1.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
